Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17036

mkfs.lustre fails with "The resize maximum must be greater than the filesystem size"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      Running command: mkfs.lustre --ost "--servicenode=127.0.0.2@tcp" "--fsname=ds001" "--index=2" "--mgsnode=127.0.0.2@tcp" "--mkfsoptions=-m1 -i 131072 -E lazy_itable_init=0,lazy_journal_init=0,nodiscard -O project -J size=1024" "--backfstype=ldiskfs" /dev/ddn/ds001_ost0002.
            
               Permanent disk data:
            Target:     ds001:OST0002
            Index:      2
            Lustre FS:  ds001
            Mount type: ldiskfs
            Flags:      0x1062
                          (OST first_time update no_primnode )
            Persistent mount opts: ,errors=remount-ro
            Parameters: failover.node=127.0.0.2@tcp mgsnode=127.0.0.2@tcp
            
            checking for existing Lustre data: not found
            device size = 16777216MB
            formatting backing filesystem ldiskfs on /dev/ddn/ds001_ost0002
            	target name   ds001:OST0002
            	kilobytes     17179869180
            	options       -m1 -i 131072   -J size=1024 -I 512 -q -O project,extents,uninit_bg,mmp,dir_nlink,quota,huge_file,flex_bg -G 256 -E lazy_itable_init=0,lazy_journal_init=0,nodiscard,resize="4290772992" -F
            mkfs_cmd = mke2fs -j -b 4096 -L ds001:OST0002 -m1 -i 131072   -J size=1024 -I 512 -q -O project,extents,uninit_bg,mmp,dir_nlink,quota,huge_file,flex_bg -G 256 -E lazy_itable_init=0,lazy_journal_init=0,nodiscard,resize="4290772992" -F /dev/ddn/ds001_ost0002 17179869180k
               detected raid stride 1048576 too large, use optimum 512
               detected raid stripe width 1048576 too large, use optimum 512
               The resize maximum must be greater than the filesystem size.
               
               Bad option(s) specified: 
               
               Extended options are separated by commas, and may take an argument which
               	is set off by an equals ('=') sign.
               
               Valid extended options are:
               	mmp_update_interval=<interval>
               	num_backup_sb=<0|1|2>
               	stride=<RAID per-disk data chunk in blocks>
               	stripe-width=<RAID stride * data disks in blocks>
               	offset=<offset to create the file system>
               	resize=<resize maximum size in blocks>
               	packed_meta_blocks=<0 to disable, 1 to enable>
               	lazy_itable_init=<0 to disable, 1 to enable>
               	lazy_journal_init=<0 to disable, 1 to enable>
               	root_owner=<uid of root dir>:<gid of root dir>
               	test_fs
               	discard
               	nodiscard
               	encoding=<encoding>
               	encoding_flags=<flags>
               	quotatype=<quota type(s) to be enabled>
      

            dongyang Dongyang Li
            dongyang Dongyang Li
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: